--- a/src/Pages/Home/style.css
+++ b/src/Pages/Home/style.css
@@ -34,7 +34,7 @@
 
 .about h2 {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 80px;
+  font-size: 55px;
   color: #e9d35b;
   height: 50px;
 }
@@ -73,7 +73,7 @@
 
 @media only screen and (max-width: 600px) {
   .about h2 {
-    font-size: 40px;
+    font-size: 35px;
   }
 
   .about .prompt {
@@ -91,5 +91,9 @@
 
   .skills h2 {
     font-size: 30px;
+  }
+  .Profile-pic{
+    width: 120px;
+    height: 120px;
   }
 }
